# claude-code-relay

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README_EN.md  cc-relay-server.service  config.example.toml  docker-compose.yml  relay-server.service
.githooks/: pre-push
.github/workflows/: release.yml
crates/relay-claude/: Cargo.toml
crates/relay-claude/src/: lib.rs  oauth.rs  relay.rs  types.rs
crates/relay-claude/src/account/: api.rs  mod.rs  oauth.rs
crates/relay-claude/tests/: relay_tests.rs
crates/relay-codex/: Cargo.toml
crates/relay-codex/src/: account.rs  lib.rs  relay.rs  types.rs
crates/relay-codex/tests/: account_tests.rs  relay_tests.rs
crates/relay-core/: Cargo.toml
crates/relay-core/src/: error.rs  lib.rs  provider.rs  relay.rs  scheduler.rs  session.rs  types.rs
crates/relay-core/tests/: error_tests.rs  platform_tests.rs
crates/relay-gemini/: Cargo.toml
crates/relay-gemini/src/: account.rs  lib.rs  oauth.rs  relay.rs  types.rs
crates/relay-gemini/tests/: relay_tests.rs
crates/relay-openai/: Cargo.toml
crates/relay-openai-to-anthropic/: Cargo.toml
crates/relay-openai-to-anthropic/src/: converter.rs  lib.rs  types.rs
crates/relay-openai-to-anthropic/tests/: converter_tests.rs
crates/relay-openai/tests/: converter_tests.rs
crates/relay-server/: Cargo.toml  build.rs
crates/relay-server/migrations/: 0001_initial_schema.sql  0002_add_client_key_hash.sql
crates/relay-server/src/: config.rs  db.rs  main.rs  scheduler.rs
crates/relay-server/src/middleware/: auth.rs  mod.rs
crates/relay-server/src/routes/: claude.rs  codex.rs  gemini.rs  mod.rs  openai.rs
