[workspace]
resolver = "2"
members = [
    "crates/relay-core",
    "crates/relay-claude",
    "crates/relay-gemini",
    "crates/relay-openai-to-anthropic",
    "crates/relay-codex",
    "crates/relay-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Claude Relay Service"]

[workspace.dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# HTTP 框架和客户端
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "socks", "gzip", "deflate", "rustls-tls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
libsqlite3-sys = { version = "0.31", features = ["bundled"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
thiserror = "2"
anyhow = "1"

# 工具
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
bytes = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }

# Workspace crates
relay-core = { path = "crates/relay-core" }
relay-claude = { path = "crates/relay-claude" }
relay-gemini = { path = "crates/relay-gemini" }
relay-openai-to-anthropic = { path = "crates/relay-openai-to-anthropic" }
relay-codex = { path = "crates/relay-codex" }
