[package]
name = "relay-claude"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
relay-core = { workspace = true }
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
async-stream.workspace = true
parking_lot.workspace = true
