[package]
name = "relay-codex"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
relay-core = { path = "../relay-core" }
async-trait.workspace = true
async-stream.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4"
