[package]
name = "relay-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
bytes.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
regex.workspace = true
reqwest.workspace = true
tracing.workspace = true
futures.workspace = true
