[package]
name = "relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "relay-server"
path = "src/main.rs"

[dependencies]
relay-core = { workspace = true }
relay-claude = { workspace = true }
relay-gemini = { workspace = true }
relay-openai-to-anthropic = { workspace = true }
relay-codex = { workspace = true }

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utils
chrono.workspace = true
dashmap.workspace = true
bytes.workspace = true
uuid.workspace = true
parking_lot.workspace = true
clap.workspace = true
